--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,11 @@
   "author": "Abhishek kange",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
-    "mongoose": "^8.5.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.1",
+    "nodemailer": "^6.9.14"
   }
 }
